# boat

./: README.md
boat_control/: CMakeLists.txt  package.xml
boat_control/launch/: boat.launch  scan.launch
boat_control/src/: GPS.py  bridge.py  cmd_speed_manage.py  heart_beat.py  info2net.py  info2net_mqtt.py  mysql.py  navigation.py  navigation.py.9.2  navigation.py.9.3  navigation.py.b  navigation.py.old  net2local.py  net2local_mqtt.bk.py  net2local_mqtt.py  xixi_v3.py  xixi_v3.py.bk
boat_msgs/: 1.py  CMakeLists.txt
boat_msgs/msg/: BoatGpsPoints.msg  BoatHeartBeat.msg  BoatVel.msg
new_serial/: CMakeLists.txt  package.xml
new_serial/launch/: new_serial.launch  new_serial.launch_bak
new_serial/src/: .hello.cpp.swp  commchk.cpp  cruise.cpp  datafeed.cpp  main.cpp  move.cpp  talker.cpp  trash.cpp
new_serial/src/bak/: commchk.cpp  cruise.cpp  datafeed.cpp  datafeed_mqtt.cpp  main.cpp  move.cpp  talker.cpp  trash.cpp
rplidar_ros/: CMakeLists.txt  package.xml
rplidar_ros/launch/: display.launch  rplidar_a3.launch  rplidar_a3_tf.launch  view_rplidar_a3_bag.launch  view_rplidar_a3_match.launch
rplidar_ros/rviz/: rplidar.rviz
rplidar_ros/sdk/src/: rplidar_driver.cpp
rplidar_ros/src/: APF.py  client.cpp  cluster.cpp  cluster.h  laser_field.py  lon_lat_cruise.py  maker.cpp  maker_2.cpp  node.cpp  path_planning.py  scan_pro.cpp
rplidar_ros/urdf/: autoboat_description.urdf
saveimg/: CMakeLists.txt  package.xml
saveimg/launch/: save.launch
saveimg/scripts/: camera.py  camera.py.bk
water_surface/: CMakeLists.txt  package.xml
water_surface/launch/: watch.launch  water_surface.launch
water_surface/scripts/: empty.py  empty.py.bk
water_surface/src/: predict_image.cpp  predict_image.cpp.kazhu  publisher.cpp  subscriber.cpp
yolov4/: CMakeLists.txt  imagelistener.py  main.cc  package.xml
yolov4/msg/: recpoint.msg
yolov4/src/: boat_names.h  config.cc  main.cc  mainorigin.cc  publish.cpp  ros2cvimg.cc  ros2cvimg.h
