<?xml version="1.0"?>
<package format="2">
  <name>yolov4</name>
  <version>0.0.0</version>
  <description>The yolov4 package</description>
  <maintainer email="hzh@todo.todo">hzh</maintainer>
  <license>TODO</license>

   <build_depend>message_generation</build_depend> 
   <exec_depend>message_runtime</exec_depend>


   <build_depend>opencv2</build_depend>
   <exec_depend>opencv2</exec_depend>


  <buildtool_depend>catkin</buildtool_depend>
   
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
 
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <export>
  </export>
</package>